--- a/DeepLearningStudy/ex_lab-09-3-xor-nn-wide-deep.ipynb
+++ b/DeepLearningStudy/ex_lab-09-3-xor-nn-wide-deep.ipynb
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Init. variables"
+    "# For reproducibility"
    ]
   },
   {
@@ -51,7 +51,24 @@
    },
    "outputs": [],
    "source": [
-    "tf.set_random_seed(777)  # for reproducibility\n",
+    "tf.set_random_seed(777)  # for reproducibility"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Init. variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "learning_rate = 0.1\n",
     "\n",
     "x_data = [[0, 0],\n",
@@ -94,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -116,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -138,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -463,13 +480,7 @@
       "       [-0.3479062 ,  0.29569125, -0.58035505,  2.09080195,  1.89642537,\n",
       "        -0.25772259,  0.47523695, -3.42903256, -0.90107709,  1.52734768],\n",
       "       [-0.07711983, -1.07329261, -0.21401672,  1.69323003,  0.35761625,\n",
-      "         0.79650909,  0.14382087, -1.56063771, -1.17657173, -1.58117604]], dtype=float32)]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "         0.79650909,  0.14382087, -1.56063771, -1.17657173, -1.58117604]], dtype=float32)]\n",
       "1100 0.633332 [array([[ 1.26121485,  1.01949096, -1.32862198, -0.34700167, -0.31392977,\n",
       "         1.6091938 ,  1.41776729, -0.79289675, -2.1163435 ,  0.85757947],\n",
       "       [ 0.65810627,  2.23566937, -0.66756916,  0.9907735 ,  0.96218628,\n",
@@ -492,7 +503,13 @@
       "       [-0.35083312,  0.31219921, -0.5704419 ,  2.09249544,  1.89320409,\n",
       "        -0.25774345,  0.47443601, -3.42900872, -0.90295053,  1.5402931 ],\n",
       "       [-0.10330606, -1.09324336, -0.19623461,  1.70227444,  0.35608315,\n",
-      "         0.79623604,  0.13078815, -1.56232667, -1.17883909, -1.57301748]], dtype=float32)]\n",
+      "         0.79623604,  0.13078815, -1.56232667, -1.17883909, -1.57301748]], dtype=float32)]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "1200 0.614356 [array([[ 1.33076203,  1.07715416, -1.3537879 , -0.34875053, -0.32305381,\n",
       "         1.65656066,  1.56765819, -0.83503997, -2.1192615 ,  0.91157633],\n",
       "       [ 0.67883021,  2.25478458, -0.68633389,  1.04078519,  0.93843192,\n",
@@ -2242,13 +2259,7 @@
       "       [-0.8351388 ,  0.82407302, -0.50693041,  2.4908917 ,  1.87673724,\n",
       "        -0.2564432 ,  0.47534859, -3.42650533, -0.83991408,  1.70849311],\n",
       "       [-1.01530302, -1.6925894 , -0.22512875,  1.99914038,  0.33675614,\n",
-      "         0.796408  ,  0.07093757, -1.57395267, -1.16170585, -1.70676732]], dtype=float32)]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "         0.796408  ,  0.07093757, -1.57395267, -1.16170585, -1.70676732]], dtype=float32)]\n",
       "8000 0.00166067 [array([[ 2.20184708,  1.26142228, -2.07293701, -0.5916906 , -0.65993845,\n",
       "         3.29168844,  3.89943504, -1.78286207, -2.51647806,  1.13931799],\n",
       "       [ 0.81878489,  2.4125874 , -1.25444329,  3.60389566,  0.45950919,\n",
@@ -2271,7 +2282,13 @@
       "       [-0.83655161,  0.82476169, -0.50701797,  2.49201179,  1.87673724,\n",
       "        -0.25644022,  0.47530985, -3.42650533, -0.839692  ,  1.70849311],\n",
       "       [-1.01636398, -1.69303453, -0.22537306,  1.99986005,  0.33685449,\n",
-      "         0.796408  ,  0.07094742, -1.57394075, -1.16145551, -1.7069819 ]], dtype=float32)]\n",
+      "         0.796408  ,  0.07094742, -1.57394075, -1.16145551, -1.7069819 ]], dtype=float32)]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "8100 0.00162827 [array([[ 2.20282149,  1.26211035, -2.07396221, -0.59323186, -0.66037714,\n",
       "         3.29385233,  3.90156865, -1.78379846, -2.51788902,  1.13875771],\n",
       "       [ 0.81903267,  2.41301656, -1.25552309,  3.60674763,  0.45913103,\n",
@@ -2386,13 +2403,7 @@
       "       [-0.84325528,  0.82800472, -0.50742644,  2.49730492,  1.87673724,\n",
       "        -0.25642532,  0.47512874, -3.42650533, -0.83864039,  1.70849311],\n",
       "       [-1.02139938, -1.69512522, -0.22653395,  2.00329757,  0.33734623,\n",
-      "         0.796408  ,  0.07099585, -1.57388115, -1.1602478 , -1.70797563]], dtype=float32)]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "         0.796408  ,  0.07099585, -1.57388115, -1.1602478 , -1.70797563]], dtype=float32)]\n",
       "8600 0.00148257 [array([[ 2.20741487,  1.26540518, -2.07882547, -0.600555  , -0.66244966,\n",
       "         3.30408502,  3.91163421, -1.78821945, -2.52459407,  1.13611031],\n",
       "       [ 0.82020688,  2.41509938, -1.2606473 ,  3.62021685,  0.45734769,\n",
@@ -2415,7 +2426,13 @@
       "       [-0.84452879,  0.82861638, -0.50750393,  2.49830627,  1.87673724,\n",
       "        -0.25642234,  0.47509298, -3.42650533, -0.83844197,  1.70849311],\n",
       "       [-1.02235699, -1.69551861, -0.22675478,  2.00395632,  0.33744457,\n",
-      "         0.796408  ,  0.07100554, -1.57386923, -1.16002131, -1.70816636]], dtype=float32)]\n",
+      "         0.796408  ,  0.07100554, -1.57386923, -1.16002131, -1.70816636]], dtype=float32)]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "8700 0.00145634 [array([[ 2.20828438,  1.26603699, -2.07975149, -0.6019485 , -0.66284132,\n",
       "         3.30602431,  3.91353416, -1.78905594, -2.52587104,  1.13560963],\n",
       "       [ 0.82042933,  2.41550469, -1.26162004,  3.62276578,  0.45701072,\n",
@@ -2530,13 +2547,7 @@
       "       [-0.85060006,  0.83151293, -0.50787258,  2.50307584,  1.87673724,\n",
       "        -0.25640744,  0.47492248, -3.42650533, -0.83749676,  1.70849311],\n",
       "       [-1.02692115, -1.69737184, -0.22780898,  2.00710869,  0.33793631,\n",
-      "         0.796408  ,  0.07105155, -1.57380962, -1.15891182, -1.7090416 ]], dtype=float32)]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "         0.796408  ,  0.07105155, -1.57380962, -1.15891182, -1.7090416 ]], dtype=float32)]\n",
       "9200 0.00133723 [array([[ 2.21241498,  1.26907432, -2.08414698, -0.60859823, -0.66470093,\n",
       "         3.31522799,  3.92255545, -1.79301977, -2.53196764,  1.133232  ],\n",
       "       [ 0.82149082,  2.41742444, -1.26625729,  3.63486981,  0.45541263,\n",
@@ -2559,7 +2570,13 @@
       "       [-0.85175896,  0.83206242, -0.50794411,  2.50398183,  1.87673724,\n",
       "        -0.25640446,  0.4748897 , -3.42650533, -0.83731794,  1.70849311],\n",
       "       [-1.02779305, -1.69772089, -0.22801042,  2.00770497,  0.33803466,\n",
-      "         0.796408  ,  0.07106049, -1.5737977 , -1.15869725, -1.70920849]], dtype=float32)]\n",
+      "         0.796408  ,  0.07106049, -1.5737977 , -1.15869725, -1.70920849]], dtype=float32)]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "9300 0.00131559 [array([[ 2.21320176,  1.26965845, -2.08498144, -0.60986906, -0.66505426,\n",
       "         3.31697965,  3.92426705, -1.79377317, -2.53313589,  1.132779  ],\n",
       "       [ 0.82169348,  2.41778731, -1.26714242,  3.63717079,  0.45510924,\n",
@@ -2674,13 +2691,7 @@
       "       [-0.85730392,  0.83467454, -0.50827736,  2.50831413,  1.87673724,\n",
       "        -0.25638956,  0.47472587, -3.42650533, -0.83646089,  1.70849311],\n",
       "       [-1.0319649 , -1.69938266, -0.22897536,  2.0106144 ,  0.3385264 ,\n",
-      "         0.796408  ,  0.07110519, -1.5737381 , -1.15766478, -1.70999742]], dtype=float32)]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "         0.796408  ,  0.07110519, -1.5737381 , -1.15766478, -1.70999742]], dtype=float32)]\n",
       "9800 0.0012165 [array([[ 2.21694684,  1.27247536, -2.08898902, -0.61595559, -0.66673851,\n",
       "         3.32533693,  3.93242502, -1.7973609 , -2.53871632,  1.13062596],\n",
       "       [ 0.82266092,  2.4195652 , -1.27137494,  3.64814544,  0.45366383,\n",
@@ -2703,7 +2714,13 @@
       "       [-0.85836601,  0.83517206, -0.50834292,  2.50914788,  1.87673724,\n",
       "        -0.25638658,  0.47469607, -3.42650533, -0.83629817,  1.70849311],\n",
       "       [-1.03276384, -1.69969714, -0.22916044,  2.01116991,  0.33862475,\n",
-      "         0.796408  ,  0.07111345, -1.57372618, -1.15746212, -1.71014595]], dtype=float32)]\n",
+      "         0.796408  ,  0.07111345, -1.57372618, -1.15746212, -1.71014595]], dtype=float32)]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "9900 0.00119838 [array([[ 2.2176621 ,  1.27302003, -2.08975196, -0.61712313, -0.66706038,\n",
       "         3.32693315,  3.93398094, -1.79804528, -2.5397892 ,  1.13021553],\n",
       "       [ 0.8228457 ,  2.41989899, -1.27218556,  3.65023899,  0.45338818,\n",
@@ -2768,7 +2785,7 @@
        "'\\nHypothesis:  [[ 0.01338218]\\n [ 0.98166394]\\n [ 0.98809403]\\n [ 0.01135799]]\\nCorrect:  [[ 0.]\\n [ 1.]\\n [ 1.]\\n [ 0.]]\\nAccuracy:  1.0\\n'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
