--- a/DeepLearningStudy/ex_lab-09-6-multi-linear_back_prop.ipynb
+++ b/DeepLearningStudy/ex_lab-09-6-multi-linear_back_prop.ipynb
@@ -4,10 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ex_lab-09-6-multi-linear_back_prop\n",
-    "#### http://blog.aloni.org/posts/backprop-with-tensorflow/\n",
-    "#### https://medium.com/@karpathy/yes-you-should-understand-backprop-e2f06eab496b#.b3rvzhx89\n",
-    "## WIP\n",
+    "# [ ex_lab-09-6-multi-linear_back_prop ]\n",
+    " \n",
+    " >[Back propagation with TensorFlow - Dan Aloni's blog](http://blog.aloni.org/posts/backprop-with-tensorflow/) <br/>\n",
+    "  >[Yes you should understand backprop - Andrej Karpathy](https://medium.com/@karpathy/yes-you-should-understand-backprop-e2f06eab496b#.b3rvzhx89)\n",
+    "\n",
     "\n",
     "\n"
    ]
