--- a/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
+++ b/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
@@ -17,7 +17,7 @@
     "This is equivalent to tf.nn.sigmoid_softmax_with_logits(logits, labels)\n",
     "\n",
     "### [References]\n",
-    "> 1. [Tensorflow Document (tf.nn.sigmoid_softmax_with_logits)](https://www.tensorflow.org/api_docs/python/tf/nn/sigmoid_cross_entropy_with_logits)\n",
+    "> 1. [Tensorflow Document (tf.nn.sigmoid_cross_entropy_with_logits)](https://www.tensorflow.org/api_docs/python/tf/nn/sigmoid_cross_entropy_with_logits)\n",
     "> 2. [Neural Net Backprop in one slide! by Sung Kim](https://docs.google.com/presentation/d/1_ZmtfEjLmhbuM_PqbDYMXXLAqeWN0HwuhcSKnUQZ6MM/edit#slide=id.g1ec1d04b5a_1_83)\n",
     "> 3. [Back Propagation with Tensorflow by Dan Aloni](http://blog.aloni.org/posts/backprop-with-tensorflow/)\n",
     "> 4. [Yes you should understand backprop by Andrej Karpathy](https://medium.com/@karpathy/yes-you-should-understand-backprop-e2f06eab496b#.cockptkn7)\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -75,19 +75,19 @@
     "import numpy as np\n",
     "\n",
     "print('tensorflow version: {0}'.format(tf.__version__))\n",
-    "print('numpy version: {0}'.format(np.__version__))"
+    "print('numpy version: {0}'.format(np.__version__))\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# for reproducibility"
+    "# For reproducibility"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -115,8 +115,7 @@
     "xy = np.loadtxt('./data_file/data-04-zoo.csv', delimiter=',', dtype=np.float32)\n",
     "X_data = xy[:, 0:-1]\n",
     "N = X_data.shape[0]\n",
-    "y_data = xy[:, [-1]]\n",
-    "\n"
+    "y_data = xy[:, [-1]]\n"
    ]
   },
   {
@@ -128,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -143,8 +142,7 @@
    "source": [
     "# y_data has labels from 0 ~ 6\n",
     "print(\"y has one of the following values\")\n",
-    "print(np.unique(y_data))\n",
-    "\n"
+    "print(np.unique(y_data))\n"
    ]
   },
   {
@@ -158,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -174,8 +172,7 @@
     "# X_data.shape = (101, 16) => 101 samples, 16 features\n",
     "# y_data.shape = (101, 1)  => 101 samples, 1 label\n",
     "print(\"Shape of X data: \", X_data.shape)\n",
-    "print(\"Shape of y data: \", y_data.shape)\n",
-    "\n"
+    "print(\"Shape of y data: \", y_data.shape)\n"
    ]
   },
   {
@@ -187,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -203,9 +200,7 @@
     "target = tf.cast(target, tf.float32)\n",
     "\n",
     "W = tf.Variable(tf.random_normal([16, nb_classes]), name='weight')\n",
-    "b = tf.Variable(tf.random_normal([nb_classes]), name='bias')\n",
-    "\n",
-    "\n"
+    "b = tf.Variable(tf.random_normal([nb_classes]), name='bias')\n"
    ]
   },
   {
@@ -221,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -230,8 +225,7 @@
     "def sigma(x):\n",
     "    # sigmoid function\n",
     "    # σ(x) = 1 / (1 + exp(-x))\n",
-    "    return 1. / (1. + tf.exp(-x))\n",
-    "\n"
+    "    return 1. / (1. + tf.exp(-x))\n"
    ]
   },
   {
@@ -247,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -256,29 +250,27 @@
     "def sigma_prime(x):\n",
     "    # derivative of the sigmoid function\n",
     "    # σ'(x) = σ(x) * (1 - σ(x))\n",
-    "    return sigma(x) * (1. - sigma(x))\n",
-    "\n"
+    "    return sigma(x) * (1. - sigma(x))\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Forward propagtion"
+    "# Forward propagation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Forward propagtion\n",
+    "# Forward propagation\n",
     "layer_1 = tf.matmul(X, W) + b\n",
-    "y_pred = sigma(layer_1)\n",
-    "\n"
+    "y_pred = sigma(layer_1)\n"
    ]
   },
   {
@@ -290,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -311,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -334,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -359,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -383,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -392,8 +384,7 @@
     "# Prediction and Accuracy\n",
     "prediction = tf.argmax(y_pred, 1)\n",
     "acct_mat = tf.equal(tf.argmax(y_pred, 1), tf.argmax(target, 1))\n",
-    "acct_res = tf.reduce_mean(tf.cast(acct_mat, tf.float32))\n",
-    "\n"
+    "acct_res = tf.reduce_mean(tf.cast(acct_mat, tf.float32))\n"
    ]
   },
   {
@@ -405,63 +396,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step:     0\t Loss:  460.25620\t Acc: 39.60%\n",
-      "Step:    10\t Loss:  115.17030\t Acc: 82.18%\n",
-      "Step:    20\t Loss:   81.62040\t Acc: 89.11%\n",
-      "Step:    30\t Loss:   67.03764\t Acc: 91.09%\n",
-      "Step:    40\t Loss:   58.01501\t Acc: 92.08%\n",
-      "Step:    50\t Loss:   51.66171\t Acc: 93.07%\n",
-      "Step:    60\t Loss:   46.84314\t Acc: 96.04%\n",
-      "Step:    70\t Loss:   43.02425\t Acc: 97.03%\n",
-      "Step:    80\t Loss:   39.90575\t Acc: 97.03%\n",
-      "Step:    90\t Loss:   37.30070\t Acc: 97.03%\n",
-      "Step:   100\t Loss:   35.08412\t Acc: 97.03%\n",
-      "Step:   110\t Loss:   33.16888\t Acc: 97.03%\n",
-      "Step:   120\t Loss:   31.49230\t Acc: 97.03%\n",
-      "Step:   130\t Loss:   30.00830\t Acc: 97.03%\n",
-      "Step:   140\t Loss:   28.68227\t Acc: 97.03%\n",
-      "Step:   150\t Loss:   27.48777\t Acc: 97.03%\n",
-      "Step:   160\t Loss:   26.40426\t Acc: 98.02%\n",
-      "Step:   170\t Loss:   25.41552\t Acc: 98.02%\n",
-      "Step:   180\t Loss:   24.50853\t Acc: 100.00%\n",
-      "Step:   190\t Loss:   23.67274\t Acc: 100.00%\n",
-      "Step:   200\t Loss:   22.89943\t Acc: 100.00%\n",
-      "Step:   210\t Loss:   22.18137\t Acc: 100.00%\n",
-      "Step:   220\t Loss:   21.51245\t Acc: 100.00%\n",
-      "Step:   230\t Loss:   20.88746\t Acc: 100.00%\n",
-      "Step:   240\t Loss:   20.30198\t Acc: 100.00%\n",
-      "Step:   250\t Loss:   19.75214\t Acc: 100.00%\n",
-      "Step:   260\t Loss:   19.23460\t Acc: 100.00%\n",
-      "Step:   270\t Loss:   18.74644\t Acc: 100.00%\n",
-      "Step:   280\t Loss:   18.28510\t Acc: 100.00%\n",
-      "Step:   290\t Loss:   17.84829\t Acc: 100.00%\n",
-      "Step:   300\t Loss:   17.43400\t Acc: 100.00%\n",
-      "Step:   310\t Loss:   17.04045\t Acc: 100.00%\n",
-      "Step:   320\t Loss:   16.66602\t Acc: 100.00%\n",
-      "Step:   330\t Loss:   16.30930\t Acc: 100.00%\n",
-      "Step:   340\t Loss:   15.96897\t Acc: 100.00%\n",
-      "Step:   350\t Loss:   15.64388\t Acc: 100.00%\n",
-      "Step:   360\t Loss:   15.33297\t Acc: 100.00%\n",
-      "Step:   370\t Loss:   15.03530\t Acc: 100.00%\n",
-      "Step:   380\t Loss:   14.74998\t Acc: 100.00%\n",
-      "Step:   390\t Loss:   14.47623\t Acc: 100.00%\n",
-      "Step:   400\t Loss:   14.21332\t Acc: 100.00%\n",
-      "Step:   410\t Loss:   13.96059\t Acc: 100.00%\n",
-      "Step:   420\t Loss:   13.71743\t Acc: 100.00%\n",
-      "Step:   430\t Loss:   13.48329\t Acc: 100.00%\n",
-      "Step:   440\t Loss:   13.25764\t Acc: 100.00%\n",
-      "Step:   450\t Loss:   13.04002\t Acc: 100.00%\n",
-      "Step:   460\t Loss:   12.82998\t Acc: 100.00%\n",
-      "Step:   470\t Loss:   12.62712\t Acc: 100.00%\n",
-      "Step:   480\t Loss:   12.43105\t Acc: 100.00%\n",
-      "Step:   490\t Loss:   12.24143\t Acc: 100.00%\n",
+      "Step:     0\t Loss:  560.10706\t Acc: 41.58%\n",
+      "Step:    10\t Loss:  119.73383\t Acc: 81.19%\n",
+      "Step:    20\t Loss:   89.07840\t Acc: 85.15%\n",
+      "Step:    30\t Loss:   73.56354\t Acc: 88.12%\n",
+      "Step:    40\t Loss:   63.15818\t Acc: 92.08%\n",
+      "Step:    50\t Loss:   55.48395\t Acc: 95.05%\n",
+      "Step:    60\t Loss:   49.58410\t Acc: 97.03%\n",
+      "Step:    70\t Loss:   44.93892\t Acc: 98.02%\n",
+      "Step:    80\t Loss:   41.21234\t Acc: 98.02%\n",
+      "Step:    90\t Loss:   38.16926\t Acc: 98.02%\n",
+      "Step:   100\t Loss:   35.64078\t Acc: 98.02%\n",
+      "Step:   110\t Loss:   33.50475\t Acc: 98.02%\n",
+      "Step:   120\t Loss:   31.67242\t Acc: 98.02%\n",
+      "Step:   130\t Loss:   30.07883\t Acc: 98.02%\n",
+      "Step:   140\t Loss:   28.67602\t Acc: 98.02%\n",
+      "Step:   150\t Loss:   27.42812\t Acc: 98.02%\n",
+      "Step:   160\t Loss:   26.30792\t Acc: 98.02%\n",
+      "Step:   170\t Loss:   25.29448\t Acc: 98.02%\n",
+      "Step:   180\t Loss:   24.37144\t Acc: 98.02%\n",
+      "Step:   190\t Loss:   23.52580\t Acc: 100.00%\n",
+      "Step:   200\t Loss:   22.74713\t Acc: 100.00%\n",
+      "Step:   210\t Loss:   22.02690\t Acc: 100.00%\n",
+      "Step:   220\t Loss:   21.35809\t Acc: 100.00%\n",
+      "Step:   230\t Loss:   20.73482\t Acc: 100.00%\n",
+      "Step:   240\t Loss:   20.15213\t Acc: 100.00%\n",
+      "Step:   250\t Loss:   19.60580\t Acc: 100.00%\n",
+      "Step:   260\t Loss:   19.09222\t Acc: 100.00%\n",
+      "Step:   270\t Loss:   18.60826\t Acc: 100.00%\n",
+      "Step:   280\t Loss:   18.15121\t Acc: 100.00%\n",
+      "Step:   290\t Loss:   17.71867\t Acc: 100.00%\n",
+      "Step:   300\t Loss:   17.30858\t Acc: 100.00%\n",
+      "Step:   310\t Loss:   16.91907\t Acc: 100.00%\n",
+      "Step:   320\t Loss:   16.54851\t Acc: 100.00%\n",
+      "Step:   330\t Loss:   16.19546\t Acc: 100.00%\n",
+      "Step:   340\t Loss:   15.85859\t Acc: 100.00%\n",
+      "Step:   350\t Loss:   15.53674\t Acc: 100.00%\n",
+      "Step:   360\t Loss:   15.22886\t Acc: 100.00%\n",
+      "Step:   370\t Loss:   14.93401\t Acc: 100.00%\n",
+      "Step:   380\t Loss:   14.65131\t Acc: 100.00%\n",
+      "Step:   390\t Loss:   14.37999\t Acc: 100.00%\n",
+      "Step:   400\t Loss:   14.11933\t Acc: 100.00%\n",
+      "Step:   410\t Loss:   13.86868\t Acc: 100.00%\n",
+      "Step:   420\t Loss:   13.62744\t Acc: 100.00%\n",
+      "Step:   430\t Loss:   13.39507\t Acc: 100.00%\n",
+      "Step:   440\t Loss:   13.17106\t Acc: 100.00%\n",
+      "Step:   450\t Loss:   12.95494\t Acc: 100.00%\n",
+      "Step:   460\t Loss:   12.74628\t Acc: 100.00%\n",
+      "Step:   470\t Loss:   12.54470\t Acc: 100.00%\n",
+      "Step:   480\t Loss:   12.34981\t Acc: 100.00%\n",
+      "Step:   490\t Loss:   12.16128\t Acc: 100.00%\n",
       "[True]\t Prediction: 0\t True y: 0\n",
       "[True]\t Prediction: 0\t True y: 0\n",
       "[True]\t Prediction: 3\t True y: 3\n",
@@ -571,7 +562,7 @@
        "'\\nOutput Example\\n\\nStep:     0      Loss:  453.74799        Acc: 38.61%\\nStep:    20      Loss:   95.05664        Acc: 88.12%\\nStep:    40      Loss:   66.43570        Acc: 93.07%\\nStep:    60      Loss:   53.09288        Acc: 94.06%\\n...\\nStep:   290      Loss:   18.72972        Acc: 100.00%\\nStep:   300      Loss:   18.24953        Acc: 100.00%\\nStep:   310      Loss:   17.79592        Acc: 100.00%\\n...\\n[True]   Prediction: 0   True y: 0\\n[True]   Prediction: 0   True y: 0\\n[True]   Prediction: 3   True y: 3\\n[True]   Prediction: 0   True y: 0\\n...\\n'"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
